2007-10-25  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-worker.cc (find_catalogue_for_item_desc): Cleanly handle
	missing "components" element.
	(FAILED_CATALOGUES_FILE, AVAILABLE_UPDATES_FILE): Use a dash to
	separate words, to keep the style.

	* src/pixbufblinkifier.h, src/pixbufblinkifier.c: New.
	* src/update-notifier.c: Use them instead of blinking the icon
	ourselves.
	* src/Makefile.am: Add them.

2007-10-24  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/update-notifier.c, src/update-notifier.h,
	src/hildon-update-notifier.desktop: New.
	* src/Makefile.am: Build and install them.
	* configure.ac: Check for what they need.
	
	* src/util.cc (set_update_notifier_visibility): New.
	* src/main.cc (show_check_for_updates_view): New, call
	set_update_notifier_visibility.
	(make_main_view): Use show_check_for_updates_view for the "Check
	for Updates" button.

	* src/main.cc (get_next_package_info): Do not unref PI when
	getting its info failed, there is no ref for this (N72881).

2007-10-24  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/apt-worker.cc (update_available_updates_file): New. Specific
	function to update the content of the file with information about
	available updates (AVAILABLE_UPDATES_FILE).
	(cmd_get_package_list): Moved code to write the 'available
	updates' file to the new function commented above.
	(cmd_update_package_cache): Renamed to cmd_check_updates and
	updated callers. Added a call to update_available_updates_file
	after refreshing the packages list cache, if the process didn't
	fail. Also, it now returns 'int' instead of 'void' to be able to
	use such that return value when using it in the command line mode.
	(cmd_names): Replaced UPDATE_PACKAGE_CACHE with CHECK_UPDATES.
	(enum cmdline_commands): New. Enumeration with a list of available
	commands for the command-line mode. Only CMDLINE_NOOP (no command)
	and CMDLINE_CHECK_UPDATES were added at this moment.
	(cmdline_mode): New global boolean variable to set when the